[package]
name = "dysk"
version = "2.6.1"
authors = ["dystroy <denys.seguret@gmail.com>"]
edition = "2021"
keywords = ["linux", "filesystem", "fs", "lfs", "disk"]
license = "MIT"
categories = ["filesystem", "command-line-utilities"]
description = "give information on mounted filesystems"
repository = "https://github.com/Canop/lfs"
homepage = "https://dystroy.org/dysk"
documentation = "https://dystroy.org/dysk"
readme = "README.md"
rust-version = "1.59"
exclude = ["website", "dysk*.zip"]

[dependencies]
argh = "0.1.7"
bet = "1.0.0"
crossterm = "0.23.2"
file-size = "1.0.3"
lfs-core = "0.11.0"
serde = "1.0"
serde_json = "1.0"
termimad = "0.20.5"

[profile.release]
strip = true

[patch.crates-io]
# minimad = { path = "../minimad" }
# termimad = { path = "../termimad" }
# lfs-core = { path = "../lfs-core" }
