[package]
name = "dysk"
version = "2.7.0"
authors = ["dystroy <denys.seguret@gmail.com>"]
edition = "2021"
keywords = ["linux", "filesystem", "fs", "lfs", "disk"]
license = "MIT"
categories = ["filesystem", "command-line-utilities"]
description = "give information on mounted filesystems"
repository = "https://github.com/Canop/dysk"
homepage = "https://dystroy.org/dysk"
documentation = "https://dystroy.org/dysk"
readme = "README.md"
rust-version = "1.59"
exclude = ["website", "dysk*.zip"]
build = "build.rs"

[dependencies]
dysk-cli = { version = "2.7.0", path = "cli" } # beware: version is also in build dependencies

[build-dependencies]
clap = { version = "4.3", features = ["derive", "cargo"] }
clap_complete = "4.3"
clap_mangen = "0.2.12"
dysk-cli = { version = "2.7.0", path = "cli" }

[profile.release]
strip = true

[patch.crates-io]
# minimad = { path = "../minimad" }
# termimad = { path = "../termimad" }
# clap-help = { path = "../clap-help" }
# lfs-core = { path = "../lfs-core" }
