[package]
name = "dysk"
version = "3.2.0"
authors = ["dystroy <denys.seguret@gmail.com>"]
edition = "2018"
keywords = ["linux", "mac", "filesystem", "disk"]
license = "MIT"
categories = ["filesystem", "command-line-utilities"]
description = "give information on mounted filesystems"
repository = "https://github.com/Canop/dysk"
homepage = "https://dystroy.org/dysk"
documentation = "https://dystroy.org/dysk"
readme = "README.md"
rust-version = "1.70"
exclude = ["website", "dysk*.zip"]
build = "build.rs"
resolver = "1"

[dependencies]
dysk-cli = { version = "3.2.0", path = "cli" } # beware: version is also in build dependencies

[build-dependencies]
clap = { version = "4.4", features = ["derive", "cargo"] }
clap_complete = "4.4"
clap_mangen = "0.2.12"
dysk-cli = { version = "3.2.0", path = "cli" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"

[profile.release]
strip = true

[patch.crates-io]
# bet = { path = "../bet" }
# minimad = { path = "../minimad" }
# termimad = { path = "../termimad" }
# clap-help = { path = "../clap-help" }
# lfs-core = { path = "../lfs-core" }
