[package]
name = "dysk-cli"
version = "2.10.1"
authors = ["dystroy <denys.seguret@gmail.com>"]
edition = "2021"
license = "MIT"
description = "the dysk cli as a library"
rust-version = "1.70"
resolver = "1"

[dependencies]
bet = "1.0.4"
clap = { version = "4.4", features = ["derive", "cargo"] }
clap-help = "1.4"
file-size = "1.0.3"
lfs-core = { git = "https://github.com/Canop/lfs-core.git", version = "0.12", branch = "mac-diskutil" }
serde = "1.0"
serde_json = "1.0"
termimad = "0.32"

[profile.release]
strip = true

[patch.crates-io]
# termimad = { path = "../../termimad" }

