[package]
name = "dysk-cli"
version = "3.0.0"
authors = ["dystroy <denys.seguret@gmail.com>"]
edition = "2021"
license = "MIT"
description = "the dysk cli as a library"
rust-version = "1.70"
resolver = "1"

[dependencies]
bet = "1.0.4"
clap = { version = "4.4", features = ["derive", "cargo"] }
clap-help = "1.4"
file-size = "1.0.3"
lfs-core = "0.13.3"
serde = "1.0"
serde_json = "1.0"
termimad = "0.32"

[profile.release]
strip = true

[patch.crates-io]
# termimad = { path = "../../termimad" }

