[package]
name = "dysk-cli"
version = "3.5.0"
authors = ["dystroy <denys.seguret@gmail.com>"]
edition = "2021"
license = "MIT"
description = "the dysk cli as a library"
homepage = "https://dystroy.org/dysk"
rust-version = "1.70"
resolver = "1"

[dependencies]
bet = "1.0.4"
clap = { version = "4.4", features = ["derive", "cargo"] }
clap-help = "1.4"
file-size = "1.0.3"
#lfs-core = { git = "https://github.com/Canop/lfs-core.git", branch = "smb" }
#lfs-core = { path = "../../lfs-core" }
lfs-core = "0.19.0"
serde = "1.0"
serde_json = "1.0"
termimad = "0.34.1"
#termimad = { path = "../../termimad" }

[profile.release]
strip = true

